# nd064-c2-message-passing-projects-starter

./: README.md  pyproject.toml
api-definitions/: person.json
deployment/: README.md  connection-api.yaml  location-consumer-api.yaml  location-producer-api.yaml  person-api.yaml  udaconnect-api.yaml  udaconnect-app.yaml
deployment/kafka/: kafka.yaml
docs/: architecture_decisions.txt  grpc.txt  postman.json
modules/connection/: Dockerfile  requirements.txt
modules/connection/app/: __init__.py  routes.py
modules/connection/app/api/: __init__.py  controller.py  model.py  schema.py  service.py
modules/connection/deployment/: connection-api.yaml
modules/frontend/src/components/: Connection.js
modules/location-comsumer/: Dockerfile  location_consumer.py
modules/location-consumer/: location_consumer.py
modules/location-consumer/deployment/: db-configmap.yaml  location-consumer-api.yaml
modules/location-producer/: Dockerfile  dummy_client.py  location.proto  location_pb2.py  location_pb2_grpc.py  location_server.py  requirements.txt
modules/location-producer/deployment/: kafka-configmap.yaml  location-producer-api.yaml
modules/location/app/api/: controller.py  model.py  schema.py  service.py
modules/person/app/api/: controller.py  model.py  schema.py  service.py
modules/person/deployment/: person-api.yaml
modules/udaconnect/connection/app/: routes.py
modules/udaconnect/connection/app/api/: controller.py  model.py  schema.py
modules/udaconnect/location/app/: __init__.py  routes.py
modules/udaconnect/person/app/: __init__.py
(+6 files in other folders)
